--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,40 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <android.support.design.widget.TextInputLayout  android:layout_marginTop="30dp" style="@style/textinputLayoutstyle">
         <EditText
             android:id="@+id/et_username"
-            android:layout_width="match_parent"
-            android:hint="User Name"
-            android:layout_height="wrap_content" />
+            android:hint="@string/user_name"
+            style="@style/edittextlayout" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/textinputLayoutstyle">
         <EditText
             android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
-            android:layout_height="wrap_content" />
+            style="@style/edittextlayout" />
     </android.support.design.widget.TextInputLayout>
     <TextView
         android:id="@+id/txt_forgotpassword"
-        android:text="Forgot Password"
+        android:text="@string/forgot_password"
         android:layout_gravity="right|end"
-        android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/textButtonstyle" />
     <Button
         android:id="@+id/btn_login"
-        android:text="login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:text="@string/login"
+
+        style="@style/buttonstyle" />
 
 
 
